--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -43,15 +43,15 @@ body {
 }
 
 .home-page {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
   .header {
     height: 156px;
     .nav-wrapper {
       width: 100%;
-      // position: relative;
       background-color: rgb(24, 24, 24);
-      // display: flex;
-      //
-      /* Add the blur effect */
 
       .nav-container {
         display: grid;
@@ -59,12 +59,8 @@ body {
         color: white;
         height: 64px;
         place-items: center;
-
         padding: 0 14px;
-        // .profile-box {
-        //   display: flex;
-        //   justify-content: center;
-        //   align-items: center;
+
         .profile-btn {
           width: 40px;
           height: 40px;
@@ -75,7 +71,6 @@ body {
             height: 100%;
           }
         }
-        // }
         .page-label {
           display: flex;
           width: 100%;
@@ -124,6 +119,43 @@ body {
         left: 26px;
         color: rgba(255, 255, 255, 0.637);
       }
+    }
+  }
+
+  .bottom {
+    color: white;
+    margin-top: auto;
+    z-index: -2;
+  }
+
+  .footer {
+    position: absolute;
+    display: grid;
+    place-items: center;
+    inset: 0;
+    height: 58px;
+    margin-top: auto;
+    color: white;
+    overflow: hidden;
+    background-color: rgba(17, 17, 17, 0.6);
+    .camera-box {
+      display: grid;
+      place-items: center;
+      width: 46px;
+      height: 46px;
+      background: var(--primary-gradient);
+      background: var(--cyan-gradient);
+      border-radius: 100%;
+      font-size: 24px;
+    }
+
+    .blur {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      backdrop-filter: blur(2px);
     }
   }
 }
