--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -67,6 +67,7 @@ body {
           border-radius: 100%;
           overflow: hidden;
           img {
+            object-fit: cover;
             width: 100%;
             height: 100%;
           }
@@ -122,40 +123,82 @@ body {
     }
   }
 
-  .bottom {
+  .chat-list {
+    width: 100%;
+    height: 100%;
     color: white;
-    margin-top: auto;
-    z-index: -2;
+    overflow-y: auto;
+    li {
+      display: flex;
+      align-items: center;
+      height: 76px;
+      padding: 0 14px;
+      .img-box {
+        display: grid;
+        place-items: center;
+        width: 60px;
+        height: 60px;
+        background-color: gray;
+        border-radius: 100%;
+        overflow: hidden;
+        img {
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+        }
+      }
+      .text-box {
+        padding-left: 12px;
+        .friend {
+          font-size: 16px;
+        }
+        .message {
+          color: rgb(170, 170, 170);
+        }
+      }
+      .time-box {
+        margin-left: auto;
+      }
+    }
+    .bottom-space {
+      width: 100%;
+      height: 58px;
+    }
   }
 
-  .footer {
+  .footer-wrapper {
     position: absolute;
-    display: grid;
-    place-items: center;
-    inset: 0;
+    width: 100%;
+    bottom: 0;
     height: 58px;
-    margin-top: auto;
-    color: white;
     overflow: hidden;
-    background-color: rgba(17, 17, 17, 0.6);
-    .camera-box {
+    color: white;
+    .footer {
+      position: relative;
       display: grid;
       place-items: center;
-      width: 46px;
-      height: 46px;
-      background: var(--primary-gradient);
-      background: var(--cyan-gradient);
-      border-radius: 100%;
-      font-size: 24px;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(17, 17, 17, 0.7);
+      .camera-box {
+        display: grid;
+        place-items: center;
+        width: 46px;
+        height: 46px;
+        background: var(--primary-gradient);
+        background: var(--cyan-gradient);
+        border-radius: 100%;
+        font-size: 24px;
+      }
+      z-index: 1;
     }
-
     .blur {
       position: absolute;
       inset: 0;
       width: 100%;
       height: 100%;
-      z-index: -1;
-      backdrop-filter: blur(2px);
+      z-index: 0;
+      backdrop-filter: blur(10px);
     }
   }
 }
