--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -8,6 +8,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  // border: 1px solid red;
 }
 
 body {
@@ -47,83 +48,9 @@ body {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  .header {
-    height: 156px;
-    .nav-wrapper {
-      width: 100%;
-      background-color: rgb(24, 24, 24);
-
-      .nav-container {
-        display: grid;
-        grid-template-columns: 1fr 12fr 4fr 1fr;
-        color: white;
-        height: 64px;
-        place-items: center;
-        padding: 0 14px;
-
-        .profile-btn {
-          width: 40px;
-          height: 40px;
-          border-radius: 100%;
-          overflow: hidden;
-          img {
-            object-fit: cover;
-            width: 100%;
-            height: 100%;
-          }
-        }
-        .page-label {
-          display: flex;
-          width: 100%;
-          font-size: 30px;
-          align-items: center;
-          padding-left: 12px;
-        }
-        .nav__icon {
-          display: grid;
-          place-items: center;
-          width: 40px;
-          height: 40px;
-          border-radius: 100%;
-          background-color: rgb(75, 75, 75);
-          font-size: 18px;
-        }
-      }
-    }
-    .search-box {
-      position: relative;
-      width: 100%;
-      height: 48px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 0 14px;
-      .search {
-        color: white;
-        width: 100%;
-        height: 32px;
-        background-color: rgb(47, 48, 54);
-        border-radius: 12px;
-        margin: 0 !important;
-        border-bottom: none !important;
-        padding-left: 36px !important;
-        padding-bottom: 4px;
-        transition: 0s !important;
-        &:focus {
-          border-bottom: none !important;
-          box-shadow: none !important;
-          background-color: rgba(47, 48, 54, 0.9);
-        }
-      }
-      svg {
-        position: absolute;
-        left: 26px;
-        color: rgba(255, 255, 255, 0.637);
-      }
-    }
-  }
 
   .chat-list {
+    // div {
     width: 100%;
     height: 100%;
     color: white;
@@ -164,6 +91,7 @@ body {
       width: 100%;
       height: 58px;
     }
+    // }
   }
 
   .footer-wrapper {
@@ -200,5 +128,88 @@ body {
       z-index: 0;
       backdrop-filter: blur(10px);
     }
+  }
+}
+
+.add-page {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  .react-swipeable-view-container {
+    height: 100%;
+  }
+  .switch-wrapper {
+    padding: 0 40px;
+    height: 40px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+    border-bottom: 1px solid transparent;
+  }
+  .incoming-requests-wrapper {
+    color: white;
+    min-width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    height: 100%;
+    .incoming__label {
+      font-size: 20px;
+      padding: 14px 14px 0 14px;
+    }
+    .incoming__requests {
+      color: white;
+      display: flex;
+      flex-direction: column;
+    }
+    li {
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 14px;
+      div {
+        display: flex;
+        align-items: center;
+        .img-box {
+          height: 40px;
+          width: 40px;
+          overflow: hidden;
+          border-radius: 100%;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+        .name {
+          font-size: 16px;
+          padding-left: 10px;
+        }
+        .reject-btn {
+          font-size: 20px;
+          margin: 0 2px 0 6px;
+        }
+      }
+    }
+  }
+
+  .page-divider {
+    width: 100%;
+    height: 100%;
+    color: white;
+    overflow-x: auto;
+    display: flex !important;
+  }
+
+  .segment-button-indicator {
+    background-color: red !important;
+  }
+
+  .react-swipeable-view-container {
+    transition: transform 0.2s cubic-bezier(0.15, 0.3, 0.25, 1) 0s !important;
   }
 }
