--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -213,3 +213,59 @@ body {
     transition: transform 0.2s cubic-bezier(0.15, 0.3, 0.25, 1) 0s !important;
   }
 }
+
+// EXTRA
+
+.page {
+  background-color: var(--primary-background);
+  position: absolute !important;
+  inset: 0;
+}
+
+// GO FORWARD
+.forward-appear,
+.forward-enter {
+  transform: translate3d(100%, 0, 0);
+  z-index: 10;
+  pointer-events: none !important;
+  overflow: hidden !important;
+}
+.forward-appear-active,
+.forward-enter.forward-enter-active {
+  transition: 400ms !important;
+  transform: translate3d(0, 0, 0);
+  pointer-events: none !important;
+  overflow: hidden !important;
+}
+
+.forward-exit {
+  transform: scale3d(0.9, 0.9, 0.9);
+  transition: 400ms;
+  opacity: 0.7;
+  pointer-events: none !important;
+  overflow: hidden !important;
+}
+
+// GO BACKWARDS
+.backward-appear,
+.backward-enter {
+  transform: scale3d(0.9, 0.9, 0.9);
+  opacity: 0.7;
+  pointer-events: none !important;
+  overflow: hidden !important;
+}
+.backward-appear-active,
+.backward-enter.backward-enter-active {
+  transition: 400ms;
+  transform: scale3d(1, 1, 1);
+  opacity: 1;
+  pointer-events: none !important;
+  overflow: hidden !important;
+}
+
+.backward-exit.backward-exit-active {
+  transition: 400ms;
+  transform: translate3d(100%, 0, 0);
+  pointer-events: none !important;
+  overflow: hidden !important;
+}
