--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -91,3 +91,37 @@
     }
   }
 }
+
+.users-list {
+  li {
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 14px;
+    color: white;
+    div {
+      display: flex;
+      align-items: center;
+      .img-box {
+        height: 40px;
+        width: 40px;
+        overflow: hidden;
+        border-radius: 100%;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+      .name {
+        font-size: 16px;
+        padding-left: 10px;
+      }
+      .reject-btn {
+        font-size: 20px;
+        margin: 0 2px 0 6px;
+      }
+    }
+  }
+}
