--- a/client/src/style/_utilities.scss
+++ b/client/src/style/_utilities.scss
@@ -18,3 +18,59 @@
 .current-underline {
   border-bottom: 1px solid white;
 }
+
+// EXTRA
+
+.page {
+  background-color: var(--primary-background);
+  position: absolute !important;
+  inset: 0;
+}
+
+// GO FORWARD
+.forward-appear,
+.forward-enter {
+  transform: translate3d(100%, 0, 0);
+  z-index: 10;
+  pointer-events: none !important;
+  overflow: hidden !important;
+}
+.forward-appear-active,
+.forward-enter.forward-enter-active {
+  transition: 400ms !important;
+  transform: translate3d(0, 0, 0);
+  pointer-events: none !important;
+  overflow: hidden !important;
+}
+
+.forward-exit {
+  transform: scale3d(0.9, 0.9, 0.9);
+  transition: 400ms;
+  opacity: 0.7;
+  pointer-events: none !important;
+  overflow: hidden !important;
+}
+
+// GO BACKWARDS
+.backward-appear,
+.backward-enter {
+  transform: scale3d(0.9, 0.9, 0.9);
+  opacity: 0.7;
+  pointer-events: none !important;
+  overflow: hidden !important;
+}
+.backward-appear-active,
+.backward-enter.backward-enter-active {
+  transition: 400ms;
+  transform: scale3d(1, 1, 1);
+  opacity: 1;
+  pointer-events: none !important;
+  overflow: hidden !important;
+}
+
+.backward-exit.backward-exit-active {
+  transition: 400ms;
+  transform: translate3d(100%, 0, 0);
+  pointer-events: none !important;
+  overflow: hidden !important;
+}
