--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -118,7 +118,7 @@
         font-size: 16px;
         padding-left: 10px;
       }
-      .reject-btn {
+      .cross-btn {
         font-size: 20px;
         margin: 0 2px 0 6px;
       }
