--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -25,6 +25,7 @@
       padding: 0 14px;
 
       .profile-btn {
+        // display: inline;
         width: 40px;
         height: 40px;
         border-radius: 100%;
