--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -183,3 +183,74 @@ body {
     transition: transform 0.2s cubic-bezier(0.15, 0.3, 0.25, 1) 0s !important;
   }
 }
+
+.new-page {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  .scroll-wrapper {
+    overflow-y: auto;
+  }
+  .mouse-active {
+    &:active {
+      background-color: rgba(0, 0, 0, 0.2);
+    }
+  }
+  .users-selected {
+    background-color: rgba(0, 0, 0, 0.15);
+  }
+  .new-group-box {
+    position: relative;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    padding: 0 14px;
+    color: white;
+    margin-bottom: 6px;
+    svg {
+      font-size: 24px;
+      width: 40px;
+    }
+    .new-group-label {
+      padding-left: 10px;
+    }
+    &:before {
+      content: "";
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%);
+      bottom: 0;
+      height: 1px;
+      width: 90%; /* or 100px */
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    }
+  }
+  .check-icon {
+    color: var(--primary-cyan);
+  }
+  .create-chat-box {
+    .create-chat-btn {
+      position: absolute;
+      width: 100%;
+      height: 60px;
+      bottom: 0;
+      display: grid;
+      place-items: center;
+      font-size: 26px;
+      background-color: var(--primary-cyan);
+      outline: none;
+      border: none;
+      opacity: 0.9;
+      &:hover {
+        background-color: rgba(27, 187, 187, 0.8);
+      }
+      &:active {
+        background-color: rgba(27, 187, 187, 0.7);
+      }
+    }
+    .padding {
+      padding-top: 60px;
+    }
+  }
+}
