--- a/client/src/style/_config.scss
+++ b/client/src/style/_config.scss
@@ -4,6 +4,7 @@
   --cyan-gradient: linear-gradient(to right, #169c9c, #1bd8d8);
   --primary-background: #101218;
   --secondary-background: #1a1c20;
+  --scrollbar-size: 10px;
 }
 
 /* Change Autocomplete styles in Chrome*/
@@ -21,3 +22,26 @@ select:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
   transition: background-color 5000s ease-in-out 0s !important;
 }
+
+
+
+// /* width */
+// ::-webkit-scrollbar {
+//   width: var(--scrollbar-size);
+//   height: var(--scrollbar-size);
+// }
+
+// /* Track */
+// ::-webkit-scrollbar-track {
+//   background: #f1f1f1;
+// }
+
+// /* Handle */
+// ::-webkit-scrollbar-thumb {
+//   background: #888;
+// }
+
+// /* Handle on hover */
+// ::-webkit-scrollbar-thumb:hover {
+//   background: #555;
+// }
