--- a/client/src/style/_utilities.scss
+++ b/client/src/style/_utilities.scss
@@ -75,4 +75,11 @@
   overflow: hidden !important;
 }
 
-
+.blur {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  backdrop-filter: blur(10px);
+}
