--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -120,14 +120,6 @@ body {
       }
       z-index: 1;
     }
-    .blur {
-      position: absolute;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 0;
-      backdrop-filter: blur(10px);
-    }
   }
 }
 
@@ -252,5 +244,123 @@ body {
     .padding {
       padding-top: 60px;
     }
+  }
+}
+
+.chat-page {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  .header-wrapper {
+    position: absolute;
+    width: 100%;
+    overflow: hidden;
+    .header {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(17, 17, 17, 0.8);
+      .top-bar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        color: var(--primary-cyan);
+        width: 100%;
+        height: 52px;
+        font-size: 24px;
+        .left-section {
+          display: flex;
+          align-items: center;
+          .back-arrow {
+            display: grid;
+            place-items: center;
+            height: 52px;
+            width: 52px;
+          }
+          .user-box {
+            display: flex;
+            align-items: center;
+            .img-box-wrapper {
+              position: relative;
+              width: 36px;
+              height: 36px;
+              min-width: 36px;
+              .img-box {
+                width: 100%;
+                height: 100%;
+                border-radius: 100%;
+                overflow: hidden;
+                img {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                }
+              }
+              &::after {
+                position: absolute;
+                content: "";
+                width: 7px;
+                height: 7px;
+                background-color: rgb(0, 255, 0);
+                border-radius: 100%;
+                bottom: 2px;
+                right: 2px;
+                z-index: 10;
+                box-shadow: 0px 0px 0px 2px rgba(17, 17, 17, 0.8);
+                // -webkit-box-shadow: 1px 1px 0px 4px rgba(0, 0, 0, 1);
+                // -moz-box-shadow: 1px 1px 0px 4px rgba(0, 0, 0, 1);
+              }
+            }
+
+            .text-box {
+              display: flex;
+              justify-content: flex-start;
+              flex-direction: column;
+              line-height: 1.3;
+              padding-left: 8px;
+              .name {
+                font-size: 17px;
+                color: white;
+              }
+              .status {
+                font-size: 13px;
+                color: gray;
+              }
+            }
+          }
+        }
+        .right-section {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          width: 100px;
+          height: 100%;
+          padding-right: 12px;
+        }
+      }
+    }
+  }
+
+  .message-container {
+    width: 100%;
+    height: 100%;
+    background-color: var(--primary-background);
+    color: white;
+    .message-list {
+      height: 100%;
+      width: 100%;
+      // li {
+      //   width: 200px;
+      //   height: 30px;
+      //   background-color: white;
+      // }
+    }
+  }
+  .controller-container {
+    width: 100%;
+    height: 60px;
+    margin-top: auto;
+    background-color: var(--secondary-background);
   }
 }
