created ripple effect

--- a/client/src/style/_config.scss
+++ b/client/src/style/_config.scss
@@ -5,6 +5,7 @@
   --primary-background: #101218;
   --secondary-background: #1a1c20;
   --scrollbar-size: 10px;
+  --ripple-scale: 0;
 }
 
 /* Change Autocomplete styles in Chrome*/
@@ -22,8 +23,6 @@ select:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
   transition: background-color 5000s ease-in-out 0s !important;
 }
-
-
 
 // /* width */
 // ::-webkit-scrollbar {
