--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -56,11 +56,12 @@ body {
     color: white;
     overflow-y: auto;
     li {
+      position: relative;
       display: flex;
       align-items: center;
       height: 76px;
-      padding: 0 14px;
       .img-box {
+        pointer-events: none;
         display: grid;
         place-items: center;
         width: 60px;
@@ -75,6 +76,7 @@ body {
         }
       }
       .text-box {
+        pointer-events: none;
         padding-left: 12px;
         .friend {
           font-size: 16px;
@@ -84,6 +86,7 @@ body {
         }
       }
       .time-box {
+        pointer-events: none;
         margin-left: auto;
       }
     }
@@ -109,12 +112,13 @@ body {
       height: 100%;
       background-color: rgba(17, 17, 17, 0.8);
       .camera-box {
+        position: relative;
         display: grid;
         place-items: center;
         width: 46px;
         height: 46px;
-        background: var(--primary-gradient);
-        background: var(--cyan-gradient);
+        // background: var(--primary-gradient);
+        // background: var(--cyan-gradient);
         border-radius: 100%;
         font-size: 24px;
       }
