--- a/client/src/style/_config.scss
+++ b/client/src/style/_config.scss
@@ -6,6 +6,8 @@
   --secondary-background: #1a1c20;
   --scrollbar-size: 10px;
   --ripple-scale: 0;
+  --ripple-color: white;
+  --ripple-opacity: 0.2;
 }
 
 /* Change Autocomplete styles in Chrome*/
