--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -25,7 +25,8 @@
       padding: 0 14px;
 
       .profile-btn {
-        // display: inline;
+        display: grid;
+        place-items: center;
         width: 40px;
         height: 40px;
         border-radius: 100%;
@@ -124,5 +125,97 @@
         margin: 0 2px 0 6px;
       }
     }
+  }
+}
+
+.create-group-wrapper {
+  visibility: hidden;
+  display: grid;
+  place-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  .create-group-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    max-width: 500px;
+    height: 50%;
+    background-color: var(--secondary-background);
+    color: black;
+    border-radius: 12px;
+    z-index: 15;
+    transition: 250ms;
+    overflow: hidden;
+    padding-bottom: 60px;
+    .camera-box {
+      position: relative;
+      width: 78px;
+      height: 78px;
+      border: 3px dashed rgb(175, 175, 175);
+      border-radius: 100%;
+      display: grid;
+      place-items: center;
+      font-size: 30px;
+      color: rgb(175, 175, 175);
+      margin: 24px 0;
+    }
+    .name-box {
+      width: 80%;
+      margin: 24px 0;
+      input {
+        color: white;
+      }
+    }
+    .plus-icon-box {
+      position: absolute;
+      right: 0;
+      top: 0;
+      width: 20px;
+      height: 20px;
+      border-radius: 100%;
+      background-color: var(--primary-cyan);
+      display: grid;
+      place-items: center;
+      .plus-icon {
+        font-size: 14px;
+        color: var(--secondary-background);
+      }
+    }
+  }
+}
+
+.click-catcher {
+  visibility: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background: black;
+  transition: 250ms;
+}
+
+.create-group-box {
+  position: absolute;
+  width: 100%;
+  height: 60px;
+  bottom: 0;
+  .create-group-btn {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    font-size: 26px;
+    background-color: var(--primary-cyan);
+    outline: none;
+    border: none;
+    opacity: 0.9;
+  }
+  .padding {
+    padding-top: 60px;
   }
 }
