--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -330,8 +330,10 @@ body {
           .back-arrow {
             display: grid;
             place-items: center;
-            height: 52px;
-            width: 52px;
+            height: 40px;
+            width: 40px;
+            margin: 0 4px;
+            border-radius: 100%;
           }
           .user-box {
             display: flex;
@@ -389,9 +391,17 @@ body {
           display: flex;
           align-items: center;
           justify-content: space-between;
-          width: 100px;
-          height: 100%;
-          padding-right: 12px;
+          div {
+            width: 40px;
+            height: 40px;
+            border-radius: 100%;
+            margin: 0 4px;
+            display: grid;
+            place-items: center;
+            &:last-of-type {
+              margin: 0;
+            }
+          }
         }
       }
     }
@@ -414,8 +424,62 @@ body {
   }
   .controller-container {
     width: 100%;
-    height: 60px;
+    // height: 60px;
+    padding: 10px 0;
     margin-top: auto;
-    background-color: var(--secondary-background);
+    display: flex;
+    align-items: flex-end;
+    color: white;
+
+    .icon-left {
+      width: 36px;
+      min-width: 36px;
+      height: 36px;
+      display: grid;
+      place-items: center;
+      font-size: 22px;
+      border-radius: 100%;
+      &:first-of-type {
+        margin-left: 4px;
+      }
+    }
+    .input-box {
+      width: 100%;
+      height: 40px;
+      background-color: rgb(50, 50, 50);
+      border-radius: 20px;
+      padding: 0 6px;
+      display: flex;
+      align-items: flex-end;
+      margin-right: 8px;
+      margin-left: 4px;
+      font-size: 20px;
+      overflow: hidden;
+      div {
+        height: 32px;
+        width: 32px;
+        min-width: 32px;
+        border-radius: 100%;
+        display: grid;
+        place-items: center;
+        margin-bottom: 4px;
+      }
+      .send-btn {
+        color: var(--primary-cyan);
+      }
+      form {
+        width: 100%;
+        height: 100%;
+        textarea {
+          height: 100%;
+          color: white;
+          resize: none;
+          outline: none;
+          border: none;
+          font-size: 16px;
+          line-height: 20px;
+        }
+      }
+    }
   }
 }
