--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -431,7 +431,7 @@ body {
     align-items: flex-end;
     color: white;
 
-    .icon-left {
+    .icon-outside {
       width: 36px;
       min-width: 36px;
       height: 36px;
@@ -443,7 +443,22 @@ body {
         margin-left: 4px;
       }
     }
+    .send-btn {
+      position: fixed;
+      right: -48px;
+      width: 40px;
+      min-width: 40px;
+      height: 40px;
+      display: grid;
+      place-items: center;
+      font-size: 20px;
+      border-radius: 100%;
+      margin-right: 8px;
+      background: var(--secondary-cyan);
+      transition: 100ms;
+    }
     .input-box {
+      position: relative;
       width: 100%;
       height: 40px;
       background-color: rgb(50, 50, 50);
@@ -455,7 +470,7 @@ body {
       margin-left: 4px;
       font-size: 20px;
       overflow: hidden;
-      div {
+      .icon-inside {
         height: 32px;
         width: 32px;
         min-width: 32px;
@@ -464,21 +479,35 @@ body {
         place-items: center;
         margin-bottom: 4px;
       }
-      .send-btn {
-        color: var(--primary-cyan);
-      }
-      form {
+      .editor-wrapper {
         width: 100%;
         height: 100%;
-        textarea {
-          height: 100%;
-          color: white;
-          resize: none;
-          outline: none;
-          border: none;
-          font-size: 16px;
-          line-height: 20px;
+        .editor-container {
+          width: 100%;
+          min-height: 40px;
+          display: flex;
+          align-items: center;
+          div {
+            min-height: 40px;
+          }
+          .DraftEditor-root {
+            width: 100%;
+            color: white;
+            margin: auto 0;
+            .public-DraftEditorPlaceholder-inner {
+              padding: 4px 0;
+            }
+
+            .public-DraftEditor-content {
+              min-height: 40px;
+              div {
+                min-height: unset;
+              }
+            }
+          }
         }
+
+        // }
       }
     }
   }
