--- a/client/src/style/_config.scss
+++ b/client/src/style/_config.scss
@@ -10,6 +10,7 @@
   --ripple-color: white;
   --ripple-opacity: 0.2;
   --editor-padding: 4px 0;
+  --avatar-preview: "";
 }
 
 /* Change Autocomplete styles in Chrome*/
