--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -130,6 +130,40 @@ body {
   }
 }
 
+.profile-page {
+  width: 100%;
+  height: 100%;
+  color: white;
+  .profile-section {
+    height: 200px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .img-box {
+      width: 100px;
+      height: 100px;
+      border-radius: 100%;
+      overflow: hidden;
+      background-color: grey;
+      margin-bottom: 12px;
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    // .name {
+    //   margin: 12px 0;
+    // }
+  }
+  .settings-section {
+    height: auto;
+    width: 100%;
+  }
+}
+
 .add-page {
   width: 100%;
   height: 100%;
