--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -142,9 +142,9 @@
     align-items: center;
     justify-content: center;
     width: 90%;
-    max-width: 550px;
+    max-width: 600px;
     min-height: 400px;
-    height: 50%;
+    height: 55%;
     background-color: var(--secondary-background);
     color: black;
     border-radius: 12px;
@@ -186,38 +186,153 @@
         color: var(--secondary-background);
       }
     }
-    .popup-img-box {
+    .popup-img-box-wrapper {
       width: 90%;
       height: 90%;
       position: relative;
       overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      .popup-img-overlay {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        border-radius: 100%;
-        border: 4px solid white;
-        box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.8);
+      margin-top: 30px;
+      .popup-img-box {
         width: 100%;
         height: 100%;
-        pointer-events: none;
-        z-index: 1;
-      }
+        background-color: rgb(80, 80, 80);
+        .popup-img-overlay {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          border-radius: 100%;
+          border: 4px solid white;
+          box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.8);
+          width: 100%;
+          height: 100%;
+          pointer-events: none;
+          z-index: 1;
+        }
 
-      .image-wrapper-outer {
-        cursor: grab;
-        .image-wrapper {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          img {
-            object-fit: cover;
+        .image-wrapper-outer {
+          cursor: grab;
+          width: 100%;
+          height: 100%;
+          .image-wrapper {
+            // display: flex;
+            // align-items: center;
+            // justify-content: center;
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: contain;
+              object-position: 50% 50%;
+              pointer-events: none;
+            }
+          }
+        }
+      }
+    }
+    .track-wrapper {
+      position: relative;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-justify-content: flex-start;
+      justify-content: flex-start;
+      -webkit-align-items: center;
+      align-items: center;
+      background: transparent;
+      width: 50%;
+      -webkit-flex: 1 1;
+      flex: 1 1;
+      height: 30px;
+      margin-top: 15px;
+      padding: 15px 0;
+      input {
+        width: 100%;
+        -webkit-appearance: none;
+        background-color: transparent;
+        height: 100%;
+        position: absolute;
+        outline: none;
+        border: none;
+      }
+      input[type="range"]:focus {
+        outline: none;
+        border: none;
+      }
+      input[type="range"]::-webkit-slider-thumb {
+        visibility: hidden;
+        -webkit-appearance: none;
+      }
+      input[type="range"]::-moz-range-thumb {
+        visibility: hidden;
+        -webkit-appearance: none;
+      }
+      input[type="range"],
+      input[type="range"]::-webkit-slider-runnable-track,
+      input[type="range"]::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        background-color: transparent;
+      }
+      .track-box {
+        position: relative;
+        width: 100%;
+        margin: 0 6px;
+        pointer-events: none;
+        .inner-track-box {
+          width: 100%;
+          height: 6px;
+          overflow: hidden;
+          border-radius: 12px;
+          pointer-events: none;
+          .animate-track-fill {
+            position: relative;
+            width: 100%;
+            height: 6px;
+            background-color: var(--primary-cyan);
+            -webkit-transform: translate3d(-50%, 0, 0);
+            transform: translate3d(-50%, 0, 0);
+            border-radius: 12px;
             pointer-events: none;
+            z-index: 3;
+            // transform: translate3d(-100%, 0px, 0px);
+          }
+          .animate-track {
+            position: absolute;
+            width: 100%;
+            height: 6px;
+            top: 50%;
+            -webkit-transform: translate3d(-50%, -50%, 0);
+            transform: translate3d(-50%, -50%, 0);
+            display: -webkit-flex;
+            display: flex;
+            -webkit-align-items: center;
+            align-items: center;
+            -webkit-justify-content: flex-end;
+            justify-content: flex-end;
+            pointer-events: none;
+            z-index: 3;
+            // transform: translate3d(-100%, -50%, 0px);
+            .circle {
+              // display: none;
+              position: fixed;
+              right: -7px;
+              width: 14px;
+              height: 24px;
+              background-color: #fafafa;
+              border-radius: 4px;
+              pointer-events: none;
+              z-index: 100;
+            }
+          }
+          .fill-track {
+            position: absolute;
+            background: #575757;
+            width: 100%;
+            height: 6px;
+            top: 50%;
+            -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+            border-radius: 12px;
+            pointer-events: none;
+            z-index: 2;
           }
         }
       }
