--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -134,6 +134,21 @@ body {
   width: 100%;
   height: 100%;
   color: white;
+  .top-bar {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    button {
+      margin-right: 12px;
+      padding: 12px;
+      color: white;
+      background-color: transparent;
+      border: none;
+      outline: none;
+    }
+  }
   .profile-section {
     height: 200px;
     width: 100%;
@@ -146,17 +161,25 @@ body {
       height: 100px;
       border-radius: 100%;
       overflow: hidden;
-      background-color: grey;
-      margin-bottom: 12px;
+      margin-bottom: 8px;
+      display: grid;
+      place-items: center;
+      .avatar-label {
+        font-size: 42px;
+      }
       img {
         object-fit: cover;
         width: 100%;
         height: 100%;
       }
     }
-    // .name {
-    //   margin: 12px 0;
-    // }
+    .name {
+      font-size: 28px;
+      line-height: 1.3;
+    }
+    .username {
+      color: gray;
+    }
   }
   .settings-section {
     height: auto;
