--- a/client/src/style/_utilities.scss
+++ b/client/src/style/_utilities.scss
@@ -25,6 +25,7 @@
   background-color: var(--primary-background);
   position: absolute !important;
   inset: 0;
+  margin-top: 44px;
 }
 
 // GO FORWARD
