--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -224,8 +224,8 @@
           border-radius: 100%;
           border: 4px solid white;
           box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.8);
-          width: 100%;
-          height: 100%;
+          // width: 100%;
+          // height: 100%;
           pointer-events: none;
           z-index: 1;
         }
