--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -391,3 +391,14 @@
     padding-top: 60px;
   }
 }
+
+
+.remove-avatar-alert {
+  
+  div {
+    background: rgb(50, 50, 50) !important;
+    h2 {
+      color: white !important;
+    }
+  }
+}
