--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -253,6 +253,27 @@ body {
     }
   }
 
+  .edit-name-box {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 12px;
+    svg {
+      position: absolute;
+      right: 12px;
+      top: 50%;
+      transform: translate(0, -50%);
+      font-size: 18px;
+      color: gray;
+    }
+    font-size: 18px;
+    .value {
+      font-size: 18px;
+      color: gray;
+    }
+  }
+
   .avatar-options-popup {
     position: fixed;
     bottom: 0;
@@ -260,15 +281,50 @@ body {
     background-color: rgb(50, 50, 50);
     transform: translate3d(0, 100%, 0);
     transition: 200ms;
-    z-index:11;
+    z-index: 11;
     div {
       display: flex;
       align-items: center;
-      height:60px;
+      height: 60px;
       div {
         margin-left: 12px;
       }
     }
+  }
+}
+
+.edit-name-page {
+  color: white;
+  .top-bar {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    color: white;
+    .back-arrow {
+      display: grid;
+      place-items: center;
+      height: 40px;
+      width: 40px;
+      margin: 0 4px;
+      border-radius: 100%;
+      font-size: 22px;
+    }
+  }
+  input {
+    color: white;
+  }
+  .save-btn {
+    position: absolute;
+    bottom: 12px;
+    right: 12px;
+    border-radius: 40px;
+    color: white;
+    background: var(--primary-cyan);
+    padding: 18px 32px;
+    outline: none;
+    border: none;
   }
 }
 
