--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -499,8 +499,6 @@ body {
 }
 
 .chat-page {
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   .header-wrapper {
@@ -611,11 +609,38 @@ body {
     .message-list {
       height: 100%;
       width: 100%;
-      // li {
-      //   width: 200px;
-      //   height: 30px;
-      //   background-color: white;
-      // }
+      display: flex;
+      flex-direction: column-reverse;
+      overflow: auto;
+
+      .my-message {
+        max-width: 90%;
+        margin: 10px 4px 0 0;
+        display: flex;
+        flex-direction: column;
+        align-self: flex-end;
+        padding-right: 10px;
+        word-break: break-all;
+        background-color: var(--primary-cyan);
+        color: black;
+        border-radius: 20px;
+        padding: 10px;
+        white-space: pre-line;
+      }
+      .user-message {
+        display: flex;
+        flex-direction: column;
+        align-self: flex-start;
+        max-width: 90%;
+        margin: 10px 0 0 4px;
+        padding-right: 10px;
+        word-break: break-all;
+        background-color: rgb(50, 50, 50);
+        color: white;
+        border-radius: 20px;
+        padding: 10px;
+        white-space: pre-line;
+      }
     }
   }
   .controller-container {
