--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -76,19 +76,28 @@ body {
         }
       }
       .text-box {
+        position: relative;
         pointer-events: none;
         padding-left: 12px;
+        flex-grow: 1;
+        width: 0;
         .friend {
           font-size: 16px;
         }
         .message {
           color: rgb(170, 170, 170);
+          // display: inline-block;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
         }
       }
       .time-box {
         pointer-events: none;
+        padding-left: 20px;
         margin-left: auto;
         margin-right: 14px;
+        color: rgb(170, 170, 170);
       }
     }
     .bottom-space {
