--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -138,8 +138,6 @@ body {
 }
 
 .profile-page {
-  width: 100%;
-  height: 100%;
   color: white;
   .top-bar {
     width: 100%;
@@ -195,8 +193,6 @@ body {
 }
 
 .edit-profile-page {
-  width: 100%;
-  height: 100%;
   color: white;
   .top-bar {
     width: 100%;
@@ -514,6 +510,7 @@ body {
     position: absolute;
     width: 100%;
     overflow: hidden;
+    top: -2px;
     .header {
       position: relative;
       width: 100%;
@@ -550,6 +547,9 @@ body {
                 width: 100%;
                 height: 100%;
                 border-radius: 100%;
+                display: grid;
+                place-items: center;
+                color: white;
                 overflow: hidden;
                 img {
                   width: 100%;
@@ -615,12 +615,14 @@ body {
     height: 100%;
     background-color: var(--primary-background);
     color: white;
+    overflow: auto;
     .message-list {
       height: 100%;
       width: 100%;
       display: flex;
       flex-direction: column-reverse;
       overflow: auto;
+      padding-top: 50px;
 
       .my-message {
         max-width: 90%;
@@ -730,8 +732,12 @@ body {
 
             .public-DraftEditor-content {
               min-height: 40px;
+              display: flex;
+              align-items: center;
               div {
                 min-height: unset;
+                height: 100%;
+                width: 100%;
               }
             }
           }
