--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -111,6 +111,7 @@
     .section {
       display: flex;
       align-items: center;
+      padding: 0;
       .name {
         font-size: 16px;
         padding-left: 10px;
