create group avatar

--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -392,3 +392,23 @@
     height: 100%;
   }
 }
+
+.avatar-options-popup {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(50, 50, 50);
+  transform: translate3d(0, 100%, 0);
+  transition: 200ms;
+  z-index: 25;
+  visibility: visible;
+  color: white;
+  div {
+    display: flex;
+    align-items: center;
+    height: 60px;
+    div {
+      margin-left: 12px;
+    }
+  }
+}
