--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -150,15 +150,21 @@
     padding-bottom: 60px;
     .camera-box {
       position: relative;
-      width: 78px;
-      height: 78px;
+      width: 100px;
+      height: 100px;
       border: 3px dashed rgb(175, 175, 175);
       border-radius: 100%;
       display: grid;
       place-items: center;
-      font-size: 30px;
+      font-size: 34px;
       color: rgb(175, 175, 175);
       margin: 24px 0;
+      img {
+        object-fit: contain;
+        height: 100%;
+        width: 100%;
+        object-position: 50% 50%;
+      }
     }
     .name-box {
       width: 80%;
@@ -169,8 +175,8 @@
     }
     .plus-icon-box {
       position: absolute;
-      right: 0;
-      top: 0;
+      right: 4px;
+      top: 4px;
       width: 20px;
       height: 20px;
       border-radius: 100%;
@@ -198,10 +204,9 @@
           left: 50%;
           transform: translate(-50%, -50%);
           border-radius: 100%;
-          border: 4px solid white;
+          border: 0px solid white;
           box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.8);
-          // width: 100%;
-          // height: 100%;
+          transition: 250ms;
           pointer-events: none;
           z-index: 1;
         }
@@ -220,6 +225,8 @@
               object-fit: contain;
               object-position: 50% 50%;
               pointer-events: none;
+              opacity: 0;
+              transition: 250ms;
             }
           }
         }
