--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -56,7 +56,7 @@ body {
       position: relative;
       display: flex;
       align-items: center;
-      height: 76px;
+      height: 78px;
       .text-box {
         position: relative;
         pointer-events: none;
@@ -65,6 +65,15 @@ body {
         width: 0;
         .friend {
           font-size: 16px;
+        }
+        .chat {
+          font-size: 16px;
+        }
+        .chat-people {
+          // position: absolute;
+          font-size: 11px;
+          color: gray;
+          line-height: 0.8;
         }
         .message {
           color: rgb(170, 170, 170);
@@ -475,6 +484,12 @@ body {
                 // -moz-box-shadow: 1px 1px 0px 4px rgba(0, 0, 0, 1);
               }
             }
+            .img-box-wrapper-group {
+              position: relative;
+              width: 36px;
+              height: 36px;
+              min-width: 36px;
+            }
 
             .text-box {
               display: flex;
@@ -529,7 +544,7 @@ body {
 
       .my-message {
         max-width: 90%;
-        margin: 10px 4px 0 0;
+        margin: 10px 10px 0 0;
         display: flex;
         flex-direction: column;
         align-self: flex-end;
@@ -546,7 +561,7 @@ body {
         flex-direction: column;
         align-self: flex-start;
         max-width: 90%;
-        margin: 10px 0 0 4px;
+        margin: 10px 0 0 10px;
         padding-right: 10px;
         word-break: break-all;
         background-color: rgb(50, 50, 50);
