--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -65,6 +65,35 @@
         }
       }
     }
+    .edit-chat-container {
+      position: absolute;
+      display: flex;
+      color: white;
+      height: 64px;
+      width: 100%;
+      place-items: center;
+      justify-content: space-between;
+      padding: 0 14px;
+      background-color: rgb(24, 24, 24);
+      opacity: 0;
+      transition: 250ms;
+      z-index: 1;
+      visibility: hidden;
+      font-size: 18px;
+      .section {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        div {
+          width: 40px;
+          height: 40px;
+          border-radius: 100%;
+          margin: 0 4px;
+          display: grid;
+          place-items: center;
+        }
+      }
+    }
   }
   .search-box {
     position: relative;
