--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -57,6 +57,21 @@ body {
       display: flex;
       align-items: center;
       height: 78px;
+      .selected-chat-checkbox {
+        margin-left: 14px;
+        width: 60px;
+        height: 60px;
+        background-color: var(--primary-cyan);
+        position: absolute;
+        border-radius: 100%;
+        z-index: 1;
+        display: grid;
+        place-items: center;
+        color: black;
+        font-size: 17px;
+        opacity: 0;
+        transition: 250ms;
+      }
       .text-box {
         position: relative;
         pointer-events: none;
@@ -85,12 +100,34 @@ body {
           margin-top: -2px;
         }
       }
-      .time-box {
-        pointer-events: none;
-        padding-left: 20px;
-        margin-left: auto;
+      .time-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-end;
         margin-right: 14px;
-        color: rgb(170, 170, 170);
+        .thumbtack {
+          color: var(--primary-cyan);
+          opacity: 0.5;
+          transform: rotate(45deg);
+        }
+        .time-box {
+          pointer-events: none;
+          padding-left: 20px;
+          margin-left: auto;
+          color: rgb(170, 170, 170);
+        }
+      }
+    }
+    .archived-box {
+      height: 50px;
+      display: flex;
+      align-items: center;
+      svg {
+        color: var(--primary-cyan);
+        font-size: 18px;
+        margin: 0 33px 0 35px;
+        opacity: 0.5;
       }
     }
     .bottom-space {
