--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -49,6 +49,7 @@
         font-size: 30px;
         align-items: center;
         padding-left: 12px;
+        z-index: 1;
       }
       .icon-wrapper {
         display: flex;
@@ -84,13 +85,30 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        .archived-icon {
+          opacity: 0;
+          transition: 250ms;
+          visibility: hidden;
+        }
         div {
+          position: relative;
           width: 40px;
+          min-width: 40px;
           height: 40px;
           border-radius: 100%;
           margin: 0 4px;
           display: grid;
           place-items: center;
+          .stroke {
+            display: none;
+            background-color: white;
+            box-shadow: 0px 0px 0px 2px rgb(24, 24, 24);
+            width: 26px;
+            height: 2px;
+            position: absolute;
+            transform: rotate(35deg);
+            transition: 1s;
+          }
         }
       }
     }
