bubble gradient css

--- a/client/src/style/_config.scss
+++ b/client/src/style/_config.scss
@@ -1,5 +1,5 @@
 :root {
-  --primary-gradient: linear-gradient(to bottom, #f64f59, #c471ed, #12c2e9);
+  --primary-gradient: linear-gradient(to bottom, #ff0011, #c471ed, #12c2e9);
   --primary-cyan: #1bbbbb;
   --secondary-cyan: #1aadad;
   --cyan-gradient: linear-gradient(to right, #169c9c, #1bd8d8);
