--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -162,7 +162,7 @@ body {
         border-radius: 100%;
         font-size: 24px;
       }
-      z-index: 1;
+      z-index: 2;
     }
   }
 }
@@ -572,8 +572,9 @@ body {
     height: 100%;
     background-color: var(--primary-background);
     color: white;
-    overflow: auto;
+    overflow: hidden;
     .message-list {
+      position: relative;
       height: 100%;
       width: 100%;
       display: flex;
@@ -582,23 +583,23 @@ body {
       padding-top: 50px;
 
       .my-message {
+        position: relative;
         max-width: 80%;
         margin: 4px 8px 0 0;
         display: flex;
-        // flex-direction: column;
         align-self: flex-end;
         word-break: break-all;
-        color: black;
+        color: white;
         white-space: pre-line;
         justify-content: flex-end;
         align-items: flex-end;
       }
+
       .user-message {
         position: relative;
         max-width: 80%;
         margin: 4px 0 0 8px;
         display: flex;
-        // flex-direction: column;
         align-self: flex-start;
         word-break: break-all;
         color: white;
@@ -611,6 +612,11 @@ body {
         padding: 6px 10px;
         border-radius: 20px;
         min-width: 30px;
+
+        background-image: var(--primary-gradient);
+        background-attachment: fixed;
+
+        // background-size: 900px 900px;
       }
       .user-bubble {
         background-color: rgb(50, 50, 50);
@@ -620,7 +626,6 @@ body {
       }
       .file {
         background-color: unset;
-        // padding: 0;
         align-items: flex-end;
         .img-wrapper {
           max-width: 300px;
@@ -638,9 +643,9 @@ body {
       }
     }
   }
+
   .controller-container {
     width: 100%;
-    // height: 60px;
     padding: 10px 0;
     margin-top: auto;
     display: flex;
