image loading after send

--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -473,3 +473,17 @@
     }
   }
 }
+
+.image-loading-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: grid;
+  place-items: center;
+  // .image-loading-container {
+  //   position: relative;
+  //   width: 100%;
+  //   height: 100%;
+  // }
+}
