--- a/client/src/style/_config.scss
+++ b/client/src/style/_config.scss
@@ -2,7 +2,7 @@
   --primary-gradient: linear-gradient(to bottom, #ff0011, #c471ed, #12c2e9);
   // --bubble-gradient: linear-gradient(to bottom, #12c2e9 52px, #c471ed, #f64f59);
   // --bubble-gradient: linear-gradient(to bottom, #1bbbbb 52px, #7231db);
-  --bubble-gradient: linear-gradient(to bottom, #1bbbbb 52px, #38af6e);
+  --bubble-gradient: linear-gradient(to top, #1bbbbb 52px, #38af6e);
   --primary-cyan: #1bbbbb;
   --secondary-cyan: #1aadad;
   --cyan-gradient: linear-gradient(to right, #169c9c, #1bd8d8);
@@ -14,6 +14,8 @@
   --ripple-opacity: 0.2;
   --editor-padding: 4px 0;
   --avatar-preview: "";
+
+  --background-size-h: 0px;
 }
 
 /* Change Autocomplete styles in Chrome*/
