--- a/client/src/style/_config.scss
+++ b/client/src/style/_config.scss
@@ -2,7 +2,9 @@
   --primary-gradient: linear-gradient(to bottom, #ff0011, #c471ed, #12c2e9);
   // --bubble-gradient: linear-gradient(to bottom, #12c2e9 52px, #c471ed, #f64f59);
   // --bubble-gradient: linear-gradient(to bottom, #1bbbbb 52px, #7231db);
-  --bubble-gradient: linear-gradient(to top, #1bbbbb 52px, #38af6e);
+  // --bubble-gradient: linear-gradient(to top, #1bbbbb 52px, #38af6e);
+  // --bubble-gradient: linear-gradient(to bottom, #f15811, #f5af19);
+  --bubble-gradient: linear-gradient(to bottom, #1aadad, #0575e6);
   --primary-cyan: #1bbbbb;
   --secondary-cyan: #1aadad;
   --cyan-gradient: linear-gradient(to right, #169c9c, #1bd8d8);
@@ -34,23 +36,9 @@ select:-webkit-autofill:focus {
   transition: background-color 5000s ease-in-out 0s !important;
 }
 
-// /* width */
-// ::-webkit-scrollbar {
-//   width: var(--scrollbar-size);
-//   height: var(--scrollbar-size);
-// }
-
-// /* Track */
-// ::-webkit-scrollbar-track {
-//   background: #f1f1f1;
-// }
-
-// /* Handle */
-// ::-webkit-scrollbar-thumb {
-//   background: #888;
-// }
-
-// /* Handle on hover */
-// ::-webkit-scrollbar-thumb:hover {
-//   background: #555;
-// }
+nav {
+  background-color: unset;
+}
+button:focus {
+  background-color: unset;
+}
