--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -80,6 +80,9 @@ body {
         width: 0;
         .friend {
           font-size: 16px;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
         }
         .chat {
           font-size: 16px;
@@ -487,12 +490,15 @@ body {
         align-items: center;
         color: var(--primary-cyan);
         color: #38af6e;
+        color: #1aadad;
         width: 100%;
         height: 52px;
         font-size: 24px;
         .left-section {
           display: flex;
           align-items: center;
+          flex-grow: 1;
+          width: 0;
           .back-arrow {
             display: grid;
             place-items: center;
@@ -504,6 +510,8 @@ body {
           .user-box {
             display: flex;
             align-items: center;
+            flex-grow: 1;
+            width: 0;
             .img-box-wrapper {
               position: relative;
               width: 36px;
@@ -532,18 +540,27 @@ body {
             }
 
             .text-box {
+              position: relative;
               display: flex;
               justify-content: flex-start;
               flex-direction: column;
               line-height: 1.3;
               padding-left: 8px;
+              flex-grow: 1;
+              width: 0;
               .name {
                 font-size: 17px;
                 color: white;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
               }
               .status {
                 font-size: 13px;
                 color: gray;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
               }
             }
           }
@@ -614,6 +631,7 @@ body {
         border-radius: 20px;
         min-width: 30px;
         overflow: hidden;
+        color: white;
 
         background-image: var(--bubble-gradient);
         background-attachment: fixed;
@@ -656,7 +674,8 @@ body {
     align-items: flex-end;
     color: white;
     color: var(--primary-cyan);
-    padding-bottom: 10px;
+    color: #0575e6;
+    padding-bottom: 4px;
     padding-top: 4px;
 
     .icon-outside {
@@ -683,7 +702,7 @@ body {
       border-radius: 100%;
       margin-right: 8px;
       // background: var(--secondary-cyan);
-      background: #38af6e;
+      background: #0575e6;
       transition: 100ms;
       color: white;
     }
@@ -711,7 +730,7 @@ body {
       .editor-wrapper {
         width: 100%;
         height: 100%;
-        overflow: hidden;
+        overflow: auto;
         .file-preview-list {
           display: flex;
           align-items: center;
@@ -722,6 +741,8 @@ body {
             min-width: 80px;
             height: 80px;
             margin: 12px 8px 0 8px;
+            transform-origin: bottom;
+            animation: previewImgFadeIn 200ms;
             .preview-item {
               width: 100%;
               height: 100%;
@@ -745,6 +766,14 @@ body {
                 width: 100%;
                 height: 100%;
               }
+            }
+          }
+          @keyframes previewImgFadeIn {
+            from {
+              transform: scale3d(1, 0, 0);
+            }
+            to {
+              transform: scale3d(1, 1, 1);
             }
           }
           .preview-item-wrapper:last-of-type {
